@@ -35,7 +35,7 @@ private:
 	void				ShowOSD();
 	void				HideOSD();
 	void				RenderTTFSubtitles();
-	void				SeekPercentage(int iPercent);
+	void				Seek(bool bPlus, bool bLargeStep);
 	bool				m_bShowTime;
 	bool				m_bShowCodecInfo;
 	bool				m_bShowViewModeInfo;
